--- a/Modulo01_FundamentosDeJava/E_CajeroAutomatico/build.xml
+++ b/Modulo01_FundamentosDeJava/E_CajeroAutomatico/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Cajero" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Cajero.</description>
+<project name="E_CajeroAutomatico" default="default" basedir=".">
+    <description>Builds, tests, and runs the project E_CajeroAutomatico.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Cajero-impl.jar">
+        <target name="run" depends="E_CajeroAutomatico-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
