Completando el ejercicio de Poligono

--- a/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/E_CalculoAreaPoligonos/nbproject/project.properties
+++ b/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/E_CalculoAreaPoligonos/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=e_calculoareapoligonos.E_CalculoAreaPoligonos
+main.class=com.main.Entrada
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
