--- a/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/ConexionBD/nbproject/project.properties
+++ b/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/ConexionBD/nbproject/project.properties
@@ -24,12 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Localizacion.jar
+dist.jar=${dist.dir}/ConexionBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:/Users/shaka/Downloads/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar-1=/home/instructor/Descargas/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=localizacion.MainFrame
+main.class=conexion.Conexion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
