--- a/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/E_CajeroAutomatico_Base/nbproject/project.properties
+++ b/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/E_CajeroAutomatico_Base/nbproject/project.properties
@@ -24,14 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ConexionBD.jar
+dist.jar=${dist.dir}/E_CajeroAutomatico_Base.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.45-bin.jar-1=/home/instructor/Descargas/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:/Users/shaka/Downloads/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=conexion.Conexion
+main.class=views.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
