--- a/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/E_CajeroAutomativo/nbproject/private/private.properties
+++ b/Modulo02_LenguajeDeProgramacionJava/AnthonyHurtado/Proyectos/E_CajeroAutomativo/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.45-bin.jar=/home/instructor/Descargas/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
-user.properties.file=/home/instructor/.netbeans/8.2/build.properties
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\code\\projects\\carrera-java\\Librerias\\mysql-connector-java-5.1.45-bin.jar
+user.properties.file=C:\\Users\\shaka\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
