--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@ nbdist/
 /Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Evaluación/Banco_CarmenJ_IgnacioR/nbproject/private/
 /Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Evaluación/JSF_gonzalez_erice/nbproject/private/
 /Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Evaluación/Banco_JohnE_ImmerG/nbproject/private/
+/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/E_ComponenteMensaje/nbproject/private/
