--- a/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/PrimeFaces/nbproject/private/private.properties
+++ b/Modulo03_DesarrolloDeAplicacionesConJSF/AnthonyHurtado/Proyectos/PrimeFaces/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=/home/instructor/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-345285856.properties
-file.reference.primefaces-6.2.jar=C:\\code\\projects\\carrera-java\\Librerias\\primefaces-6.2.jar
+file.reference.primefaces-6.2.jar=/home/instructor/carrera-java/Librerias/primefaces-6.2.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/home/instructor/glassfish-4.1.1/glassfish/domains/domain1
 j2ee.server.home=/home/instructor/glassfish-4.1.1/glassfish
